# DGIIM-QUINTO

DISEÑO Y DESARROLLO DE SISTEMAS DE INFORMACIÓN/SEMINARIOS/SEMINARIO 1/SEMINARIO1/: main.py
INFORMÁTICA/METAHEURÍSTICAS/PRÁCTICAS/software/: main
INFORMÁTICA/METAHEURÍSTICAS/PRÁCTICAS/software/src/: LEEME  main.cpp  (+1 more)
INFORMÁTICA/VISIÓN POR COMPUTADOR/EXÁMENES/: .goodnotesmeta
INFORMÁTICA/VISIÓN POR COMPUTADOR/PRÁCTICAS/PRÁCTICA 1/: Ejemplo_Otsu.ipynb  RecuperarImagenOriginalTrasSuavizado.ipynb
INFORMÁTICA/VISIÓN POR COMPUTADOR/PRÁCTICAS/PRÁCTICA 2/: P2_Ej3_Template.ipynb
INGENIERÍA, EMPRESA Y SOCIEDAD/TEORÍA/TEMA 4/NormativaPropIntelectual/: ARANZADI  03-09-2022_11_44_Ley Marcas.rtf  Leg_Ley num. 24-2015, de 24 julio_RCL_2015_1149_LeyPatentesInvencion y Modelos de U.rtf  Leg_Real Decreto num. 316-2017, de 31 marzo_RCL_2017_441_Reglamento de Patentes.rtf
METAHEURÍSTICAS/PRÁCTICAS/software/: CMakeLists.txt  config.txt
METAHEURÍSTICAS/PRÁCTICAS/software/datos_portfolio_2526/: ibex_35_2025.csv
METAHEURÍSTICAS/PRÁCTICAS/software/src/: cec17.c  greedy.cpp  portfolio.cpp
METAHEURÍSTICAS/PRÁCTICAS/software/src/common/: mhtrayectory.h  solution.h  util.h
METAHEURÍSTICAS/PRÁCTICAS/software/src/inc/: bbo_solis_wets.h  bmb.h  greedy.h  portfolio.h  soliswets.h
METAHEURÍSTICAS/PRÁCTICAS/software/src/others/: dataset_processing.ipynb  extract.py
VISIÓN POR COMPUTADOR/PRÁCTICAS/Materiales de Apoyo (Python + consejos sobre cómo elaborar un informe académico-científico)-20250922/: Guia_Python.ipynb
VISIÓN POR COMPUTADOR/PRÁCTICAS/PRÁCTICA 1/: FourierApoyo.ipynb
(+37 files in other folders)
